# deiadventures

./: .gitignore  README.md
client/: package-lock.json  package.json
client/public/: manifest.json
client/public/privacy/: index.html
client/public/terms-and-conditions/: index.html
client/src/: App.css  App.js  api_config.json  index.js
client/src/common/: auth_context.js  decorations.js  dei_api_context.js  guilds.js  profilecontext.js  quest.js
client/src/components/: changeusername.js  forgotpass.js  forgotpassword.js  login.js  navbar.js  navigationbar.css  navigationbar.js  protectedroute.js  signup.js
client/src/contentpages/: gmguide.js  guildleadership.js  guildmanagement.css  guildmanagement.js  home.js  home.md  login.js  myadventures.js  myhistory.js  signup.js
client/src/landingpage/: quest.js
config/: api_config.data-analytics.json  api_config.h2o.json  api_config.staging.json
public/: index.html
server/: .env.example  .gitignore  Cargo.toml  README.md  setup.sh
server/deploy/: README.md  env.sh  run.sh
server/deploy/nginx/sites-available/: api.staging.deiadventures.quest
server/deploy/systemd/system/: dei_server.service
server/deploy/systemd/sysusers/: dei.conf
server/src/: connection_setup.sql  db.rs  error.rs  example_data.sql  init.sql  main.rs  new_example_data.sql
server/src/command/: add_admin.rs  hash_password.rs  insert_demo.rs  mod.rs
server/src/db/: 00_original_init.sql  01_add_repeatable_quests.sql  02_add_adventurer_notes.sql  migrate.rs
src/: App.js
